fix: Replaces missing thumbnail in image alignment
If the file that was uploaded can not be displayed as a thumbnail or
fails during the alignment step, then the site will replace it with a
placeholder graphic to remove "broken" images from the page.

--- a/src/components/CustomSearch/SearchSteps.css
+++ b/src/components/CustomSearch/SearchSteps.css
@@ -3,8 +3,8 @@
 }
 
 .completeThumbnail {
-  width: 150px;
-  height: auto;
+  width: 150px !important;
+  height: auto !important;
 }
 
 .verticalThumbnail {
